--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^15.11.0",
     "gatsby": "^4.4.0",
     "gatsby-plugin-google-analytics": "^4.4.0",
     "gatsby-plugin-graphql-codegen": "^3.1.0",
@@ -26,6 +27,7 @@
     "gatsby-plugin-sitemap": "^5.4.0",
     "gatsby-source-contentful": "^7.2.0",
     "graphql": "^15.8.0",
+    "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
